--- a/UML.html
+++ b/UML.html
@@ -15,9 +15,9 @@
       考试科目：<u>统 一 建 模 语 言 UML</u>
       时间：<u>100 分钟</u>
       得分：<input type="text" name="name"  id="score" style="border:none;border-bottom:1px solid #000;"><br>
-      班级:<input type="text" name="name" id="grade" style="border:none;border-bottom:1px solid #000;">
-      学号：<input type="text" name="name" id="sno"  style="border: none;border-bottom: 1px solid #000">
-      姓名：<input type="text" name="name" id="sname"  style="border: none;border-bottom: 1px solid #000">
+      班级:<input type="text" name="info" id="grade" style="border:none;border-bottom:1px solid #000;">
+      学号：<input type="text" name="info" id="sno"  style="border: none;border-bottom: 1px solid #000">
+      姓名：<input type="text" name="info" id="sname"  style="border: none;border-bottom: 1px solid #000">
     </div>
     一. 填空题<br>
     1. UML 的中文全称是: <input type="text" name="name"  style="border: none;border-bottom:1px solid #000"><br>
@@ -57,6 +57,7 @@
     <input type="text" name="name" style="height:150px;width:600px">
 
     </div>
+    <input type="button" name="name" onclick="verity()" value = "submit">
 
 </body>
 <script type="text/javascript" src = "UML.js">
