--- a/UML.html
+++ b/UML.html
@@ -50,8 +50,12 @@
     四 、判断题 <br>
     1. 用例图只是用于和客户交流和沟通的,用于确定需求。
     【<input type="text"  name="name" style="border: none;width:10px">】<br>
+    <input type="radio" name="judge1">对 <br>
+    <input type="radio" name="judge1">错 <br>
     2. 在状态图中,终止状态在一个状态图中允许有任意多个。
     【<input type="text"  name="name" style="border: none;width:10px">】<br> <br>
+    <input type="radio" name="judge1">对 <br>
+    <input type="radio" name="judge1">错 <br>
     五 、简 答 题 ( 每 题 4 分 , 共 20 分 ) <br>
     1. 简述什么是模型以及模型的表现形式? <br>
     <input type="text" name="name" style="height:150px;width:600px">
