--- a/test.html
+++ b/test.html
@@ -15,12 +15,12 @@
 </head>
 <body>
 <div id="test-container"></div>
-<script type="text/javascript" src="form-serilizer.js"></script>
-<script type="text/javascript" src="form-serilizer-spec.js"></script>
-<script type="text/javascript" src="single-choose.js"></script>
-<script type="text/javascript" src="singleChoose-spec.js"></script>
-<script type="text/javascript" src="mutil-choose.js"></script>
-<script type="text/javascript" src="mutil-choose-spec.js"></script>
+<script type="text/javascript" src="./lib/form-serilizer.js"></script>
+<script type="text/javascript" src="./spec/lib/form-serilizer-spec.js"></script>
+<script type="text/javascript" src="./lib/single-choose.js"></script>
+<script type="text/javascript" src="./spec/lib/singleChoose-spec.js"></script>
+<script type="text/javascript" src="./lib/mutil-choose.js"></script>
+<script type="text/javascript" src="./spec/lib/mutil-choose-spec.js"></script>
 
 </body>
 </html>
