--- a/test.html
+++ b/test.html
@@ -21,6 +21,7 @@
 <script type="text/javascript" src="./spec/lib/singleChoose-spec.js"></script>
 <script type="text/javascript" src="./lib/mutil-choose.js"></script>
 <script type="text/javascript" src="./spec/lib/mutil-choose-spec.js"></script>
-
+<script type="text/javascript" src="./lib/mutil-fill-blank.js"></script>
+<script type="text/javascript" src="./spec/lib/mutil-fill-blank-spec.js"></script>
 </body>
 </html>
