--- a/test.html
+++ b/test.html
@@ -23,5 +23,7 @@
 <script type="text/javascript" src="./spec/lib/mutil-choose-spec.js"></script>
 <script type="text/javascript" src="./lib/mutil-fill-blank.js"></script>
 <script type="text/javascript" src="./spec/lib/mutil-fill-blank-spec.js"></script>
+<script type="text/javascript" src="./lib/paperScore.js"></script>
+<script type="text/javascript" src="./spec/lib/paper-score-spec.js"></script>
 </body>
 </html>
